# AuPaD

./: .gitignore  .gitmodules  .gitreview  ChangeLog  Doxyfile.in  Makefile.am  README.md  aupalc.py  configure.ac  cppcheck.sh  cppcheck_suppressed.txt  meson.build  versioninfo.cache.in
config.site/: config.StrBo
documentation/: Makefile  models.json  protocol.md  user_stories.txt
src/: Makefile.am  aupad.cc  client_plugin.cc  client_plugin.hh  client_plugin_manager.hh  compound_signal_path.cc  compound_signal_path.hh  configstore.cc  configstore.hh  configstore_changes.hh  configstore_iter.hh  configstore_json.hh  configstore_plugin.cc  configstore_plugin.hh  configstore_plugin_manager.hh  configvalue.hh  dbus.cc  dbus.hh  debug_levels.cc  device_models.cc  device_models.hh  element.hh  element_controls.hh  error.hh  fixpoint.hh  live_data.cc  live_data.hh  meson.build  model_parsing_utils.hh  model_parsing_utils_json.hh  monitor_manager.cc  monitor_manager.hh  report_roon.cc  report_roon.hh  signal_path_tracker.cc  signal_path_tracker.hh  signal_paths.hh
src/dbus/: Makefile.am  aupad_dbus.hh  de_tahifi_aupad.hh  de_tahifi_debug.hh  de_tahifi_jsonio.hh  debug_dbus.hh  jsonio_dbus.hh  meson.build  taddybus.cc  taddybus.hh
tests/: Makefile.am  meson.build  player_and_amplifier.json  test_configstore.cc  test_configstore_roon.cc  test_dummy.cc  test_signal_paths.cc
tools/: aupalc.py  diagrams.sh  show_path.py
